--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -12,9 +12,9 @@
     top: 0; left: 0; right: 0;
     z-index: 100;
     width: 100%;
-    border-bottom: 1px solid #cfcfcf;
+    /* border-bottom: 1px solid #cfcfcf; */
     height: 60px;
-    /* box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.4); */
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .header .logo {
@@ -61,31 +61,56 @@
     display: none;   
 }
 
-.home {
+#home {
     position: relative;
     width: 100%;
     height: 100vh;
     background: url(../img/bg_home.jpg) no-repeat;
-    background-position: center 30px;
+    background-position: center center;
     background-size: cover;
     z-index: -1000;
 }
 
-.home .main_text {
+#home .main_text {
     padding-top: 60px;
     text-align: center;
 }
 
-.home .main_text .typing {
-    margin: 80px 0 10px;
+#home .main_text .typing_text {
+    margin: 60px 0 12px;
 }
 
-.home .main_text .typing {
-    font-size: 50px;
-    font-weight: 700;
+#home .main_text .typing_text {
+    font-size: 40px;
+    font-weight: 500;
 }
 
-.home .main_text .sub_txt {
-    font-size: 20px;
-    margin-bottom: 2px;
+.typing_text {
+    display: inline-block;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .10em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .10em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 40% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
+
+#home .main_text .sub_txt {
+    font-size: 18px;
+    margin-bottom: 1px;
 }
+
