--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -69,6 +69,7 @@
     background-position: center center;
     background-size: cover;
     z-index: -1000;
+    margin: 0 auto;
 }
 
 #home .main_text {
@@ -100,7 +101,7 @@
   /* The typing effect */
   @keyframes typing {
     from { width: 0 }
-    to { width: 40% }
+    to { width: 570px; }
   }
   
   /* The typewriter cursor effect */
@@ -113,4 +114,72 @@
     font-size: 18px;
     margin-bottom: 1px;
 }
+
+#about {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+}
+
+#about .about_wrap {
+    /* padding-top: 90px; */
+}
+
+#about .about_wrap .about_img {
+    float: left;
+    width: 55%;
+    /* background-color: gray; */
+    text-align: center;
+}
+
+#about .about_wrap .about_img > img {
+    border-radius: 50%; 
+    width: 55%;
+}
+
+#about .about_wrap .about_txt {
+    float: left;
+    width: 45%;
+    /* background-color: skyblue; */
+}
+
+#about .about_wrap .about_txt > div {
+    margin-bottom: 20px;
+}
+
+#about .about_wrap .about_txt > div > h4 {
+    position: relative;
+    font-size: 17px;
+    font-weight: 600; 
+    margin-bottom: 7px;
+    padding-left: 22px;
+}
+
+#about .about_wrap .about_txt > div > h4:before {
+    display: block;
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 13px;
+    height: 6px;
+    background-color: #8080c0;
+    border-radius: 10px;
+}
+
+#about .about_wrap .about_txt > div > p {
+    margin: 2px 0;
+    font-size: 15px;
+}
+
+#skill {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+}
+
+
+
 
