skill(아직 미완성)

--- a/portfolio/css/common.css
+++ b/portfolio/css/common.css
@@ -80,7 +80,7 @@ button {border: 0;}
 img {width: 100%;}
 
 /* clearfix */
-.clearfix{*zoom:1;}
+.clearfix{*zoom:1;}/* IE6 지원 */
 .clearfix:before, .clearfix:after {display: block; content: '';line-height: 0;}
 .clearfix:after {clear: both;}
 
