--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -65,6 +65,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    /* height: 100%; */
     background: url(../img/bg_home.jpg) no-repeat;
     background-position: center center;
     background-size: cover;
@@ -119,6 +120,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    /* height: 100%; */
     margin: 0 auto;
 }
 
@@ -177,8 +179,74 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    /* height: 100%; */
     margin: 0 auto;
+    background-color: #566270;
 }
+
+#skill .skill_wrap {
+    color: #FFFFF3;
+}
+
+#skill .skill_wrap .guage_wrap {
+    float: left;
+    width: 50%;
+    /* background-color: skyblue; */
+    padding: 0 3%;
+}
+
+#skill > .skill_wrap .guage_wrap > h2 {
+    /* color: #FFFFF3; */
+    text-align: left;
+}
+
+#skill > .skill_wrap .guage_wrap > .line {
+    display: inline-block;
+}
+
+#skill > .skill_wrap > .guage_wrap > h3 {
+    color: #FFFFF3;
+    margin-bottom: 50px;
+    text-align: left;
+}
+
+#skill > .skill_wrap > .guage_wrap > ul > li {
+    margin-bottom: 40px;
+}
+
+#skill > .skill_wrap > .guage_wrap .guage_txt {
+    margin-bottom: 10px;
+}
+
+#skill > .skill_wrap > .guage_wrap .guage_txt > span {
+    float: right;
+}
+
+#skill .skill_wrap .guage_wrap .guage_bg {
+    width: 100%;
+    background-color: #E0E3DA;
+    height: 10px;
+    border-radius: 90px;
+}
+
+#skill .skill_wrap .guage_wrap .guage_bg .guage{
+    width: 90%;
+    background-color: #F68657;
+    height: 10px;
+    display: block;
+    border-radius: 90px;
+}
+
+#skill .skill_wrap .skill_img {
+    float: left;
+    width: 44%;
+    background-color: skyblue;
+    background: url(../img/bg_skill.jpg) center center no-repeat;
+    /* background-attachment: fixed; */
+    background-size: cover;
+    height: 100vh;
+}
+
 
 
 
