--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -218,7 +218,12 @@
     margin-bottom: 10px;
 }
 
-#skill > .skill_wrap > .guage_wrap .guage_txt > span {
+#skill > .skill_wrap > .guage_wrap .guage_txt > span{
+    font-size: 13px;
+    margin-left: 5px;
+}
+
+#skill > .skill_wrap > .guage_wrap .guage_txt > .per {
     float: right;
 }
 
@@ -230,21 +235,124 @@
 }
 
 #skill .skill_wrap .guage_wrap .guage_bg .guage{
-    width: 90%;
     background-color: #F68657;
     height: 10px;
     display: block;
     border-radius: 90px;
+    /* transition-timing-function: ease; */
+}
+
+#skill .skill_wrap .guage_wrap .guage_bg .gg01{
+    width: 90%;
+}
+
+#skill .skill_wrap .guage_wrap .guage_bg .gg02{
+    width: 80%
+}
+
+#skill .skill_wrap .guage_wrap .guage_bg .gg03{
+    width: 70%;
+}
+
+#skill .skill_wrap .guage_wrap .guage_bg .gg04{
+    width: 75%;
+}
+
+#skill .skill_wrap .guage_wrap .guage_bg .gg05{
+    width: 60%;
+}
+
+#skill .skill_wrap .guage_wrap .guage_bg .gg06{
+    width: 85%;
 }
 
 #skill .skill_wrap .skill_img {
     float: left;
     width: 44%;
-    background-color: skyblue;
     background: url(../img/bg_skill.jpg) center center no-repeat;
     /* background-attachment: fixed; */
     background-size: cover;
     height: 100vh;
+}
+
+#skill .skill_wrap .skill_img:before {
+    display: block;
+    content:'';
+    /* float: left; */
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.4);
+}
+
+#portfolio {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    /* height: 100%; */
+    margin: 0 auto;
+}
+
+#portfolio > h3{
+    margin-bottom: 60px;
+}
+
+#portfolio .portfolio_wrap .portfolio_tab {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+#portfolio .portfolio_wrap .portfolio_tab > a {
+    padding: 8px 40px;
+    margin: 0 5px;
+    background-color: #8080BF;
+    font-size: 15px;
+    border-radius: 10px;
+    color: #fff;
+}
+
+#portfolio .portfolio_wrap .portfolio_tab > a.on {
+    background-color: #2B2B40;
+}
+
+#portfolio .portfolio_wrap .content_container {
+    margin: 20px auto;
+    width: 85%;
+    height: 900px;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+#portfolio .portfolio_wrap .content_container .content {
+    float: left;
+    width: 25%;
+    /* height: 400px; */
+    overflow: hidden;
+    cursor: pointer;
+    border: 1px solid #a3a1a1;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+#portfolio .portfolio_wrap .content_container .content .item {
+    position: relative;
+    height: 320px;
+    /* width: 90%; */
+    margin: 10px auto;
+    background-color: skyblue;
+}
+
+#portfolio .portfolio_wrap .content_container .content .item > img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);   
+    width: 90%;
+    margin: 10px auto;
+}
+
+#portfolio .portfolio_wrap .content_container .content .content_tit {
+  font-size: 17px;
+  font-weight: 500;
+  margin: 0 auto 10px;
 }
 
 
