--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -53,7 +53,7 @@
     line-height: 1.2;
 }
 
-.gnb_wrap .gnb > ul > li > a.on {
+.gnb_wrap .gnb > ul > li > a.active {
     color: #8080c0;
 }
 
@@ -293,7 +293,7 @@
 }
 
 #portfolio > h3{
-    margin-bottom: 60px;
+    margin-bottom: 55px;
 }
 
 #portfolio .portfolio_wrap .portfolio_tab {
@@ -310,15 +310,15 @@
     color: #fff;
 }
 
-#portfolio .portfolio_wrap .portfolio_tab > a.on {
+#portfolio .portfolio_wrap .portfolio_tab > a.active {
     background-color: #2B2B40;
 }
 
 #portfolio .portfolio_wrap .content_container {
-    margin: 20px auto;
+    margin: 5px auto;
     width: 85%;
-    height: 900px;
-    background-color: rgba(0, 0, 0, 0.1);
+    /* height: 900px; */
+    /* background-color: rgba(0, 0, 0, 0.1); */
 }
 
 #portfolio .portfolio_wrap .content_container .content {
@@ -327,32 +327,68 @@
     /* height: 400px; */
     overflow: hidden;
     cursor: pointer;
-    border: 1px solid #a3a1a1;
-    box-sizing: border-box;
     text-align: center;
 }
 
 #portfolio .portfolio_wrap .content_container .content .item {
     position: relative;
     height: 320px;
+    overflow: hidden;
     /* width: 90%; */
-    margin: 10px auto;
-    background-color: skyblue;
+    /* margin: 10px auto; */
 }
 
-#portfolio .portfolio_wrap .content_container .content .item > img {
+#portfolio .portfolio_wrap .content_container .content .item .item_img {
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     transform: translate(-50%,-50%);   
-    width: 90%;
+    width: 85%;
     margin: 10px auto;
+}
+
+#portfolio .portfolio_wrap .content_container .content .item .item_cover {
+    position: absolute;
+    top: 0;
+    left: 0;   
+    width: 100%;
+    height: 320px;
+    z-index: 1;
+    background-color: #2B2B40;
+    opacity: 0;
+}
+
+#portfolio .portfolio_wrap .content_container .content .item:hover .item_cover {
+    background-color: #2B2B40;
+    opacity: 0.8;
+    transition: .5s all ease;
+}
+
+#portfolio .portfolio_wrap .content_container .content .item:hover .item_img {
+    width: 90%;
+    transition: .5s all ease;
+}
+
+#portfolio .portfolio_wrap .content_container .content .item .item_cover .item_txt {
+    color: #fff;
+    margin-top: 10px;
+}
+
+#portfolio .portfolio_wrap .content_container .content .item .item_cover .item_txt > h4 {
+    font-size: 25px;
+}
+
+#portfolio .portfolio_wrap .content_container .content .item .item_cover .item_txt > p {
+    font-size: 16px;
 }
 
 #portfolio .portfolio_wrap .content_container .content .content_tit {
   font-size: 17px;
   font-weight: 500;
-  margin: 0 auto 10px;
+  margin: 10px auto;
 }
 
 
