--- a/portfolio/css/common.css
+++ b/portfolio/css/common.css
@@ -67,6 +67,8 @@ h1,h2,h3,h4,h5,h6 {font-size: 13px; font-weight: normal;}
 h2 {text-align: center; font-size: 45px;padding-top: 80px;position: relative;}
 h3{text-align: center; font-size: 16px;margin-bottom: 90px;color:#a3a1a1; }
 
+section {min-height: 100vh;}
+
 .line {
     margin: 5px auto 13px;
     background-color: #F16B6F;
