--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -46,7 +46,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(../img/bg_home02.jpg) no-repeat;
+    background: url(../img/bg_home.jpg) no-repeat;
     background-position: center center;
     background-size: cover;
     z-index: -1000;
@@ -75,7 +75,7 @@
 /* The typing effect */
 @keyframes typing {
     from { width: 0 }
-    to { width: 600px; }
+    to { width: 650px; }
 }
 
 /* The typewriter cursor effect */
@@ -525,7 +525,7 @@
     width: 48%;
     height: 752px;
     color: #fff;
-    padding: 80px 0;
+    padding: 140px 0;
 }
 
 #contact .contact_wrap .map_wrap #map {
@@ -543,7 +543,7 @@
 
 #contact > .contact_wrap .info_wrap > h2 {
     text-align: left;
-    align-self: flex-start;
+    padding-top: 140px;
 }
 
 #contact > .contact_wrap .info_wrap > .line {
@@ -1001,8 +1001,6 @@
     .msg_popup > h1 {font-size: 80px;}
 
     .msg_popup > p {font-size: 1.125em;}
-
-    #top_btn {right: 10px; bottom: 10px;}
     
     .footer {font-size: 0.688em; padding: 50px 0;}
 }
