contact 수정 / 이미지 용량 줄임

--- a/portfolio/css/common.css
+++ b/portfolio/css/common.css
@@ -80,8 +80,9 @@ button,fieldset,input {border: 0;}
 textarea {resize: none; border: none; overflow-x:hidden;overflow-y: auto;}
 
 input::placeholder, textarea::placeholder {
-    color: #7f7f7f; 
+    color: #949494; 
     font-size: 14px;   
+    font-weight: 300;
     font-family: 'Noto Sans KR', sans-serif;
 }
 
