--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -46,7 +46,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(../img/bg_home.jpg) no-repeat;
+    background: url(../img/bg_home02.jpg) no-repeat;
     background-position: center center;
     background-size: cover;
     z-index: -1000;
@@ -609,48 +609,13 @@
     margin: 15px 0 80px;
     color: #fff;
     cursor: pointer;
-    padding: 15px 30px;
+    padding: 15px 50px;
     font-weight: 400;
     font-size: 1.250em;
     border: none;
     background: #2b90d9;
     display: inline-block;
-    border-radius: 90px;
-}
-
-.thankyou_message {display: none;}
-
-.msg_popup_wrap {
-    position: absolute;
-    top: 0; right: 0; left: 0; bottom: 0;
-	background-color: rgba(0,0,0,.8);
-    z-index: 10;
-    margin: 0 auto;  
-    width: 100%;
-    overflow: hidden;
-    text-align: center;    
-}
-
-.msg_popup {
-    position: absolute; 
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%,-50%);   
-}
-
-.msg_popup > h1 {
-    color: #fff;
-    font-size: 120px;
-    font-weight: 600;
-}
-
-.msg_popup > p {
-    color: #fff;
-    font-size: 1.563em;
-    font-weight: 300;
+    border-radius: 10px;
 }
 
 #top_btn {
